--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,31 @@
 form {
-  border: 2px solid red;
   width: 50vw;
   height: 75vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
+  justify-content: space-between;
 }
-
-button {
+form input {
+  display: grid;
+  grid-column: span 4;
+  margin-bottom: 10px;
+  height: 25vh;
+  width: 90vw;
+  font-size: 70px;
+}
+form button {
   height: 100px;
   width: 100px;
   border-radius: 50px;
   align-items: center;
 }
-
-.acButton {
+form .acButton {
   display: grid;
   grid-column: span 3;
   width: 100%;
 }
-
-.equalsButton {
+form .equalsButton {
   display: grid;
   grid-column: span 2;
   width: 100%;
