--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,18 @@ form {
   grid-template-rows: 1fr 1fr 1fr 1fr;
   justify-content: space-between;
 }
-form input {
+form .input1 {
   display: grid;
   grid-column: span 4;
   margin-bottom: 10px;
-  height: 25vh;
-  width: 90vw;
-  font-size: 70px;
+  height: 15vh;
+  width: 80vw;
+  font-size: 60px;
+  text-align: right;
 }
-form button {
-  height: 100px;
-  width: 100px;
+form .button {
+  height: 90px;
+  width: 90px;
   border-radius: 50px;
   align-items: center;
 }
