--- a/styles.scss
+++ b/styles.scss
@@ -5,17 +5,19 @@ form {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     justify-content: space-between;
-input {
+.input1 {
         display: grid;
         grid-column: span 4;
         margin-bottom: 10px;
-        height: 25vh;
-        width: 90vw;
-        font-size: 70px;
+        height: 15vh;
+        width: 80vw;
+        font-size: 60px;
+        text-align:right
+
     }
-button {
-        height: 100px;
-        width: 100px;
+.button {
+        height: 90px;
+        width: 90px;
         border-radius: 50px;
         align-items: center;
     
