--- a/styles.scss
+++ b/styles.scss
@@ -1,28 +1,28 @@
-form {
+.calculator_keys {
     width: 50vw;
     height: 75vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     justify-content: space-between;
-.input1 {
+.calculator_display {
         display: grid;
         grid-column: span 4;
         margin-bottom: 10px;
         height: 15vh;
         width: 80vw;
         font-size: 60px;
-        text-align:right
+        text-align:right;
 
     }
-.button {
+button {
         height: 90px;
         width: 90px;
         border-radius: 50px;
         align-items: center;
     
     }
-.acButton {
+.AC {
         display: grid;
         grid-column: span 3;
         width: 100%;
