--- a/styles.scss
+++ b/styles.scss
@@ -1,35 +1,54 @@
-.calculator_keys {
-    width: 50vw;
-    height: 75vh;
+.container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-content: space-between;
-.calculator_display {
-        display: grid;
-        grid-column: span 4;
+    justify-content: center;
+    .calculator_display {
+        background-color: rgb(173, 171, 171);
+        border-radius: 5%;
         margin-bottom: 10px;
         height: 15vh;
         width: 80vw;
         font-size: 60px;
         text-align:right;
-
+        font-family: sans-serif;
     }
-button {
-        height: 90px;
+    .calculator {
+        background-color: rgb(110, 29, 29);
+        border-radius: 10%;
+        width: 100vw;
+        display: grid;
+        justify-content: center;
+        padding: 10px;
+    }
+    .calculator_keys {
+        width: 50vw;
+        height: 75vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+
+    button {
+        height: 70px;
         width: 90px;
         border-radius: 50px;
+        justify-content: space-around;
         align-items: center;
-    
-    }
-.AC {
+        background-color: pink;
+
+}
+    .AC {
         display: grid;
         grid-column: span 3;
         width: 100%;
-    }
-.equalsButton {
+}
+    .equalsButton {
         display: grid;
         grid-column: span 2;
         width: 100%;
-    }
 }
+}
+
+
+
+
+
