--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
   display: grid;
   justify-content: center;
 }
+.container h1 {
+  text-align: center;
+}
 .container .calculator_display {
   background-color: #adabab;
   border-radius: 5%;
@@ -34,6 +37,9 @@
   justify-content: space-around;
   align-items: center;
   background-color: pink;
+  font-family: sans-serif;
+  font-size: 50px;
+  color: #2e0000;
 }
 .container .AC {
   display: grid;
