--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,9 @@
 .container {
     display: grid;
     justify-content: center;
+    h1 {
+        text-align: center;
+    }
     .calculator_display {
         background-color: rgb(173, 171, 171);
         border-radius: 5%;
@@ -34,6 +37,9 @@
         justify-content: space-around;
         align-items: center;
         background-color: pink;
+        font-family: sans-serif;
+        font-size: 50px;
+        color: rgb(46, 0, 0);
 
 }
     .AC {
