--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,23 @@
   grid-column: span 2;
   width: 100%;
 }
+
+@media screen and (min-width: 800px) {
+  .container {
+    display: grid;
+    justify-content: none;
+  }
+  .container .calculator {
+    width: 30vw;
+    display: grid;
+    justify-content: none;
+  }
+  .container button {
+    display: grid;
+    justify-content: none;
+    width: 90px;
+  }
+  .container .calculator_keys {
+    width: 25vw;
+  }
+}
