--- a/styles.scss
+++ b/styles.scss
@@ -54,7 +54,29 @@
 }
 }
 
-
+@media screen and (min-width: 800px) {
+    .container {
+        display: grid;
+        justify-content: none;
+        .calculator {
+            width: 30vw;
+            display: grid;
+            justify-content: none;
+        }      
+        button {
+            display: grid;
+            justify-content: none;
+            width: 90px;
+        } 
+        .calculator_display {
+            
+        }
+        .calculator_keys {
+            width: 25vw;
+            
+        }
+    }
+}
 
 
 
